--- a/www/index.html
+++ b/www/index.html
@@ -57,7 +57,7 @@
             <input type="number" id="num1">
             <input type="number" id="num2">
             <button onclick = "add()" >add</button>
-            <div id="placeholder"> your asnwer here </div>
+            <div id="placeholder"> your asnwer testing </div>
             <!--second class, adding vibration to the appplication-->
             <input type="number" id="vibrationNum">
             <button onclick = "vibration()" >vibrate</button>
