--- a/www/index.html
+++ b/www/index.html
@@ -49,21 +49,22 @@
             <p class="event listening">Connecting to Device</p>
             <p class="event received">Device is Ready</p>
             <!--adding camera functions-->
-            
-            <button id="buttonId" onclick="pics()">Picture</button>
-            <img id="myImage" height="50%" width="50%"></img>
+            <button id="buttonId" onclick="pics()">Picture</button>     
 
             <!--first class, placing buttons for a calculator-->
             <input type="number" id="num1">
             <input type="number" id="num2">
             <button onclick = "add()" >add</button>
-            <div id="placeholder"> your asnwer testing </div>
+            <div id="placeholder"> your asnwer here </div>
             <!--second class, adding vibration to the appplication-->
             <input type="number" id="vibrationNum">
             <button onclick = "vibration()" >vibrate</button>
 
         </div>
-    </div>
+        <div>
+            <img id="myImage" height="50%" width="50%">image here</img>
+        </div>
+        </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
