--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,10 @@
             <p class="event listening">Connecting to Device</p>
             <p class="event received">Device is Ready</p>
             <!--adding camera functions-->
-            <button id="buttonId" onclick="pics()">Picture</button>     
+            <button id="camera" onclick="pics()">Picture</button> 
+            
+            <!-- adding GeoLocation to the application -->
+            <button id="geoLocation" onclick="getLocation()">getLocation</button>
 
             <!--first class, placing buttons for a calculator-->
             <input type="number" id="num1">
@@ -61,15 +64,23 @@
             <button onclick = "vibration()" >vibrate</button>
 
         </div>
+        <!-- place holder for the picture -->
         <div>
             <img id="myImage" height="50%" width="50%">image here</img>
         </div>
+        <!-- 4th class -- showing the Latitude and Longitude of the device -->
+        <div id="myPosition" >location here </div>
+        
+        <div id="map"> </div>
+
         </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
         app.initialize();
     </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApFPNQ2WxbEueUXMJBPHjLenlPnFo68ls&callback=initMap">  </script>
+
 </body>
 
 </html>
