finishing maps addition

--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -79,6 +79,7 @@
     <script type="text/javascript">
         app.initialize();
     </script>
+    <script src="https://api.opencagedata.com/geocode/v1/json?q=LAT+LNG&key=7281aaf002ec4fe88734b4d64d6e9c69"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApFPNQ2WxbEueUXMJBPHjLenlPnFo68ls&callback=initMap">  </script>
 
 </body>
